@@ -26,9 +26,9 @@
 #ifndef NeverDestroyed_h
 #define NeverDestroyed_h
 
-#include <wtf/Alignment.h>
+#include <type_traits>
+#include <utility>
 #include <wtf/Noncopyable.h>
-#include <wtf/StdLibExtras.h>
 
 // NeverDestroyed is a smart pointer like class who ensures that the destructor
 // for the given object is never called, but doesn't use the heap to allocate it.
@@ -59,20 +59,18 @@ public:
         new (NotNull, asPtr()) T;
     }
 
-    template<typename P1>
-    NeverDestroyed(const P1& p1)
+    template<typename A1>
+    NeverDestroyed(A1&& a1)
     {
-        new (NotNull, asPtr()) T(p1);
+        new (NotNull, asPtr()) T(std::forward<A1>(a1));
     }
 #endif
 
     operator T&() { return *asPtr(); }
 
 private:
-#if COMPILER_SUPPORTS(CXX_RVALUE_REFERENCES)
     NeverDestroyed(NeverDestroyed&&) WTF_DELETED_FUNCTION;
     NeverDestroyed& operator=(NeverDestroyed&&) WTF_DELETED_FUNCTION;
-#endif
 
     typedef typename std::remove_const<T>::type *PointerType;
 
@@ -80,7 +78,7 @@ private:
 
     // FIXME: Investigate whether we should allocate a hunk of virtual memory
     // and hand out chunks of it to NeverDestroyed instead, to reduce fragmentation.
-    AlignedBuffer<sizeof(T), WTF_ALIGN_OF(T)> m_storage;
+    typename std::aligned_storage<sizeof(T), std::alignment_of<T>::value>::type m_storage;
 };
 
 } // namespace WTF;
