@@ -1,3 +1,15 @@
+2013-09-10  Anders Carlsson  <andersca@apple.com>
+
+        Clean up wtf/Noncopyable.h
+        https://bugs.webkit.org/show_bug.cgi?id=121115
+
+        Reviewed by Darin Adler.
+
+        Use std::aligned_storage instead of WTF::AlignedBuffer.
+
+        * wtf/NeverDestroyed.h:
+        (WTF::NeverDestroyed::NeverDestroyed):
+
 2013-09-09  Brent Fulgham  <bfulgham@apple.com>
 
         [Windows] Change from using OwnPtr<GDI Stuff> to new GDIObject template.
